--- a/jsonexo/css/styles.css
+++ b/jsonexo/css/styles.css
@@ -1,3 +1,17 @@
-.card{
-    background-color:white;
+
+
+.cardTest{
+    width: 300px;
+    height: 400px;
+    background-color:rgb(114, 114, 114);
+ 
+
+}
+
+.click{
+    background-color:yellow;
+}
+.cardTest img{
+    width: 100%;
+ 
 }
